force-app/main/default/objects/Guardian__c/Guardian__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Guardian.</description>
    <label>Guardian</label>
    <nameField>
        <label>Guardian Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guardians</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>