force-app/main/default/objects/Guardian__c/fields/Primary_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Primary_Guardian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Guardian</label>
    <type>Checkbox</type>
</CustomField>